PA_Education/TestMenifest/force-app/main/default/objects/OccasionManagement__c/OccasionManagement__c.object-meta.xml
<CustomObject>
    <label>Farewell</label>
    <nameField>
        <displayFormat>OM-{YY}{MM}{DD}-{0000}</displayFormat>
        <label>경조사 No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>