PA_Education/TestMenifest/force-app/main/default/objects/OccasionManagement__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>내용</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>결혼</fullName>
            </value>
            <value>
                <fullName>부고</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>