PA_Education/TestMenifest/force-app/main/default/objects/OccasionManagement__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <formula>IF(OR(AND(TEXT(Content__c) = &apos;결혼&apos;, TEXT(Recipient__c) = &apos;본인&apos;),
      AND(TEXT(Content__c) = &apos;부고&apos;, TEXT(Recipient__c) = &apos;부친&apos;),
      AND(TEXT(Content__c) = &apos;부고&apos;, TEXT(Recipient__c) = &apos;모친&apos;)),
   1000000,
   IF(AND(TEXT(Content__c) = &apos;결혼&apos;, TEXT(Recipient__c) = &apos;자녀&apos;),
      500000,
      IF(OR(AND(TEXT(Content__c) = &apos;부고&apos;, TEXT(Recipient__c) = &apos;장인&apos;),
            AND(TEXT(Content__c) = &apos;부고&apos;, TEXT(Recipient__c) = &apos;장모&apos;)),
         300000,0)
      )
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>경조비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>