PA_Education/TestMenifest/force-app/main/default/objects/OccasionManagement__c/fields/PaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>PaymentStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>지급유무</label>
    <type>Checkbox</type>
</CustomField>