PA_Education/TestMenifest/force-app/main/default/objects/OccasionManagement__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <label>대상</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Content__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>본인</fullName>
            </value>
            <value>
                <fullName>자녀</fullName>
            </value>
            <value>
                <fullName>부친</fullName>
            </value>
            <value>
                <fullName>모친</fullName>
            </value>
            <value>
                <fullName>장인</fullName>
            </value>
            <value>
                <fullName>장모</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>