PA_Education/TestMenifest/force-app/main/default/objects/OccasionManagement__c/fields/Registrant__c.field-meta.xml
<CustomField>
    <fullName>Registrant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>신청자</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Occasion</relationshipName>
    <type>Lookup</type>
</CustomField>