PA_Education/TestMenifest/force-app/main/default/objects/OccasionManagement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Registrant__c</columns>
    <columns>Recipient__c</columns>
    <columns>Content__c</columns>
    <columns>Expense__c</columns>
    <columns>PaymentStatus__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>